--- a/Aplicacions-Web/JavaScript/Exercicis/exercici6.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici6.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <p id="e6"></p>
-    <button type="button" onclick="window.open('exercici7.html','_self')">Següent Exercici</button>
+    <button id='boto' type="button" onclick="window.open('exercici7.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 6
@@ -19,6 +19,7 @@
     else {
       document.getElementById('e6').innerHTML = "Malard, t'has equivocat en alguna...";
     }
+    document.getElementById('boto').style.visibility="visible";
 
   </script>
 </html>
