--- a/Aplicacions-Web/JavaScript/Exercicis/exercici10.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici10.html
@@ -7,17 +7,23 @@
   </head>
   <body>
     <p id="e10"></p>
-    <button type="button" onclick="window.open('exercici11.html','_self')">Següent Exercici</button>
+    <button id='boto' type="button" onclick="window.open('exercici11.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 10
     var tenums = prompt("Escriu 10 nombres separats per comes:", "1, 2, 3, 4, 5, 6, 7, 8, 9, 10");
     tenums = tenums.split(", ", 10);
-    while ((isNaN(parseFloat(tenums[3])) || isNaN(parseFloat(tenums[4])) || isNaN(parseFloat(tenums[5]))) == true ) {
-    	tenums = prompt("Escriu 10 nombres separats per comes:", "1, 2, 3, 4, 5, 6, 7, 8, 9, 10");
-      tenums = tenums.split(", ", 10);
+    while (isNaN(parseFloat(tenums[3]))) {
+    	tenums[3] = prompt("Torna a introduir el 4t nombre, si us plau:")
+    }
+    while (isNaN(parseFloat(tenums[4]))) {
+    	tenums[4] = prompt("Torna a introduir el 5é nombre, si su plau:")
+    }
+    while (isNaN(parseFloat(tenums[5]))) {
+    	tenums[5] = prompt("Torna a introduir el 6é nombre, si us plau:");
     }
     document.getElementById('e10').innerHTML = (parseFloat(tenums[3]) + parseFloat(tenums[4]) + parseFloat(tenums[5]));
+    document.getElementById('boto').style.visibility="visible";
 
   </script>
 </html>
