--- a/Aplicacions-Web/JavaScript/Exercicis/exercici8.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici8.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <p id="e8"></p>
-    <button type="button" onclick="window.open('exercici9.html','_self')">Següent Exercici</button>
+    <button id='boto' type="button" onclick="window.open('exercici9.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 8
@@ -19,12 +19,18 @@
 
     var nums = prompt("Introdueix tres nombres separats per comes:", "5, 6, 7");
     nums = nums.split(", ", 3);
-    while ((isNaN(parseFloat(nums[0]))) || (isNaN(parseFloat(nums[1])) || (isNaN(parseFloat(nums[2])))) == true ) {
-      nums = prompt("Introdueix tres nombres separats per comes:", "5, 6, 7");
-      nums = nums.split(", ");
+    while (isNaN(parseFloat(nums[0]))) {
+    	nums[0] = prompt("Introdueix el 1r nombre un altre cop:")
+    }
+    while (isNaN(parseFloat(nums[1]))) {
+    	nums[1] = prompt("Introdueix el 2n nombre un altre cop:")
+    }
+    while (isNaN(parseFloat(nums[2]))) {
+    	nums[2] = prompt("Introdueix el 3r nombre un altre cop:");
     }
 
     document.getElementById('e8').innerHTML = "El nombre més gran és: " + mesGran(nums);
+    document.getElementById('boto').style.visibility="visible";
 
   </script>
 </html>
