Coses sobre l'html L'he fet compatible per a la raspberry.

--- a/Aplicacions-Web/html/exercicis/index.html
+++ b/Aplicacions-Web/html/exercicis/index.html
@@ -7,15 +7,15 @@
 		<link rel="stylesheet" href="css/master.css">
 	</head>
 	<body>
-		<h1 class="center">pswsm</h1>
-		<h5 class="center">yay</h5>
+		<h1 class="center">Servidor del pswsm</h1>
 		<hr>
-		<h2>Who do this kiddo be?</h2>
-		<p>This kiddo do be a self taught coder (mostly), on C++, Python, and HTML/CSS.</p>
-		<p>Almost all my (un)finished projects are on my <a href=https://github.com/pswsm target=_blank>GitHub</a>.<br>There's the git about my current studies, the git with a game translation, and a yuzu fork where I wont do anything until I master my C++ skills.</p>
-		<p>If anyone knows a great and complete guide about it (C++), please feel like dropping it by mail, it's on GitHub ... I think ...</p>
-		<hr>
-		<p>Si vols veure la <a href="https://games.pausse.epizy.com">pràctica de videojocs.</a></p>
-		<a href=./pagina.html style=color:#999999>Contingut</a>
+		<div class="dcenter">
+			<div class="subdcenter">
+				<button type="button" name="nextcloud" id="nc" onclick="window.open('nextcloud','_self')">Al Nextcloud</button>
+			</div>
+			<div class="subdcenter">
+				<button type="button" name="pihole" id="pihole" onclick="window.open('admin','_self')">Al PiHole</button>
+			</div>
+		</div>
 	</body>
 </html>
