--- a/Aplicacions-Web/JavaScript/Exercicis/pr2/exercici8.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/pr2/exercici8.html
@@ -8,9 +8,26 @@
     <h3>Exercici 8</h3>
   </body>
   <script type="text/javascript">
-    var tenums = []
-    while (tenums.lenght != ) {
-
+    function mesGran(arr) {
+      var mesGran = Math.max.apply(Math, arr);
+      return mesGran;
     }
+    var tenums = [];
+    // var i = -1
+    do {
+      tenums[tenums.length] = prompt("Escriu un nombre aleatori:");
+    } while (tenums.length != 10);
+
+    for (var i = 0; i < tenums.length; i++) {
+      while (isNaN(parseFloat(tenums[i]))) {
+        tenums[i] = prompt("Ep! \"" + tenums[i] + "\" no es un nombre. \nTorna a escriu-re'n un:");
+      }
+    }
+
+    for (var i = 0; i < tenums.length; i++) {
+      tenums[i] = parseFloat(tenums[i])
+    }
+    document.write("El més gran és: " + mesGran(tenums));
+
   </script>
 </html>
