--- a/Aplicacions-Web/JavaScript/blackjack.html
+++ b/Aplicacions-Web/JavaScript/blackjack.html
@@ -9,7 +9,7 @@
   <h1>Benvingut al Blackjack</h1>
 </body>
 <script>
-  var const deck {
+  const deck = {
     spadesA: [1, 11]
   }
   console.log(deck)
