--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	│   │   &nbsp;&nbsp;&nbsp; ├── <a href="./Aplicacions-Web/html/exercicis/s-tier.html">s-tier.html</a><br>
 	│   │   &nbsp;&nbsp;&nbsp; └── <a href="./Aplicacions-Web/html/exercicis/web-editors.html">web-editors.html</a><br>
 	│   └── <a href="./Aplicacions-Web/JavaScript/">JavaScript</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./Aplicacions-Web/JavaScript/blackjack.html">blackjack.html</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./Aplicacions-Web/JavaScript/Exercicis/">Exercicis</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   ├── <a href="./Aplicacions-Web/JavaScript/Exercicis/func/">func</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   │   └── <a href="./Aplicacions-Web/JavaScript/Exercicis/func/suma.html">suma.html</a><br>
