--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Exercici 1</title>
+    <title>Exercici 2</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -18,14 +18,12 @@
       <li><a href="exercici9.html">Exercici 9</a></li>
       <li><a href="exercici10.html">Exercici 10</a></li>
     </ul>
-    <h1>Exercici 1</h1>
-    <button id="boto" onclick="clickbutton()">Clica Aquí!</button>
+    <h1>Exercici 2</h1>
+    <button id="boto" onclick="newWin()">Fes clic aquí.</button>
   </body>
   <script type="text/javascript">
-    var clik = 0
-    function clickbutton() {
-      clik++;
-      alert("Has clicat " + clik + " vegades.");
+    function newWin() {
+      window.open('', '_blank').document.write("Hola a tots!");
     }
   </script>
 </html>
