--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici5.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici5.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Exercici 1</title>
+    <title>Exercici 5</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -18,14 +18,26 @@
       <li><a href="exercici9.html">Exercici 9</a></li>
       <li><a href="exercici10.html">Exercici 10</a></li>
     </ul>
-    <h1>Exercici 1</h1>
-    <button id="boto" onclick="clickbutton()">Clica Aquí!</button>
+    <h1>Exercici 5</h1>
+
   </body>
   <script type="text/javascript">
-    var clik = 0
-    function clickbutton() {
-      clik++;
-      alert("Has clicat " + clik + " vegades.");
+    num = prompt("Introdueix un nombre:")
+    function primer(a) {
+      var prime = false
+      while (prime == false) {
+        for (var i = 2; i < a; i++) {
+          if ((a % i) == 0) {
+          prime = false;
+          }
+        }
+      }
+      if (prime == true) {
+        return "El nombre " + a + " és primer.";
+      } else {
+        return "El nombre " + a + " no es primer";
+      }
     }
+    document.write(primer(num));
   </script>
 </html>
