--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici6.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici6.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Exercici 1</title>
+    <title>Exercici 5</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -18,14 +18,9 @@
       <li><a href="exercici9.html">Exercici 9</a></li>
       <li><a href="exercici10.html">Exercici 10</a></li>
     </ul>
-    <h1>Exercici 1</h1>
-    <button id="boto" onclick="clickbutton()">Clica Aquí!</button>
+    <h1>Exercici 6</h1>
+    <p>El codi que has posat genera una taula de 4x2 en la que pots escriure uns valors a la 2na columna.<br>
+      Despres a la última fila, on només hi ha un botó, quan el cliquem s'executa una funcióa a la que se li passen els valors que hem escrit.<br>
+      Aquesta funció anomenada <i>escriu</i>, agafa 3 paràmetres, que esciur amb el color canviat i una mica de text extra.</p>
   </body>
-  <script type="text/javascript">
-    var clik = 0
-    function clickbutton() {
-      clik++;
-      alert("Has clicat " + clik + " vegades.");
-    }
-  </script>
 </html>
