--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici7.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr1/exercici7.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Exercici 1</title>
+    <title>Exercici 5</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
@@ -18,14 +18,7 @@
       <li><a href="exercici9.html">Exercici 9</a></li>
       <li><a href="exercici10.html">Exercici 10</a></li>
     </ul>
-    <h1>Exercici 1</h1>
-    <button id="boto" onclick="clickbutton()">Clica Aquí!</button>
+    <h1>Exercici 7</h1>
+    <p><a href="e7-sub.html">Aquest</a> codi d'HTML crea una pàgina amb un botó que si cliques t'envia una pàgina enrere segons l'historial.</p>
   </body>
-  <script type="text/javascript">
-    var clik = 0
-    function clickbutton() {
-      clik++;
-      alert("Has clicat " + clik + " vegades.");
-    }
-  </script>
 </html>
