--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
@@ -23,27 +23,38 @@
     <br>
     <form method="post">
       <table>
+        <textarea id="calc" cols="30" rows="3" disabled></textarea>
         <tr>
-          <td><input type="button" name="sett" value="7"></td>
-          <td><input type="button" name="vuit" value="8"></td>
-          <td><input type="button" name="nouu" value="9"></td>
+          <td><input type="button" id="sett" value="7" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="vuit" value="8" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="nouu" value="9" onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" name="ktre" value="4"></td>
-          <td><input type="button" name="cinc" value="5"></td>
-          <td><input type="button" name="siss" value="6"></td>
+          <td><input type="button" id="qtre" value="4" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="cinc" value="5" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="siss" value="6" onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" name="u" value="1"></td>
-          <td><input type="button" name="dos" value="2"></td>
-          <td><input type="button" name="tres" value="3"></td>
+          <td><input type="button" id="u" value="1" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="dos" value="2" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="tres" value="3" onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" name="zero" value="0"></td>
-          <td><input type="button" name="suma" value="+"></td>
-          <td><input type="button" name="rsta" value="-"></td>
+          <td><input type="button" id="zero" value="0" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="suma" value=" + " onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="rsta" value=" - " onclick="printToTA(this.value)"></td>
+        </tr>
+        <tr>
+          <td><input type="button" value="=" onclick="calcular()"></td>
         </tr>
       </table>
     </form>
   </body>
+  <script type="text/javascript">
+    var ta = document.getElementById('calc');
+    var taSplit
+    function result() {
+      
+    }
+  </script>
 </html>
