--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
@@ -23,38 +23,54 @@
     <br>
     <form method="post">
       <table>
-        <textarea id="calc" cols="30" rows="3" disabled></textarea>
+        <td>
+          <h3 id=calc></h3>
+        </td>
         <tr>
-          <td><input type="button" id="sett" value="7" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="vuit" value="8" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="nouu" value="9" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="sett" value=7 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="vuit" value=8 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="nouu" value=9 onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" id="qtre" value="4" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="cinc" value="5" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="siss" value="6" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="qtre" value=4 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="cinc" value=5 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="siss" value=6 onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" id="u" value="1" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="dos" value="2" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="tres" value="3" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="u" value=1 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="dos" value=2 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="tres" value=3 onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" id="zero" value="0" onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="suma" value=" + " onclick="printToTA(this.value)"></td>
-          <td><input type="button" id="rsta" value=" - " onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="zero" value=0 onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="suma" value="+" onclick="printToTA(this.value)"></td>
+          <td><input type="button" id="rsta" value="-" onclick="printToTA(this.value)"></td>
         </tr>
         <tr>
-          <td><input type="button" value="=" onclick="calcular()"></td>
+          <td><input type="button" value="=" onclick="printToTA()"></td>
         </tr>
       </table>
     </form>
   </body>
   <script type="text/javascript">
-    var ta = document.getElementById('calc');
-    var taSplit
-    function result() {
-      
+  var ta = document.getElementById('calc');
+  var taSplit
+  var result
+  function printToTA(val) {
+    if (val == "+") {
+      result += ta.innerHTML;
+      ta.innerHTML = "";
     }
+    else if (val == "-") {
+      result -= ta.innerHTML;
+      ta.innerHTML = "";
+    }
+    else if (val == "=") {
+      ta.innerHTML = result
+    }
+    else {
+      ta.innerHTML += val;
+    }
+  }
   </script>
 </html>
