Feta tota uf2-pr2, amb alguns petits defectes i falta un exercici (12).

--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici3.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici3.html
@@ -19,6 +19,8 @@
     <li><a href="exercici8.html">Exercici 8</a></li>
     <li><a href="exercici9.html">Exercici 9</a></li>
     <li><a href="exercici10.html">Exercici 10</a></li>
+    <li><a href="exercici11.html">Exercici 11</a></li>
+    <li><a href="exercici12.html">Exercici 12</a></li>
   </ul>
   <h3>Exercici 3</h3>
   <input type="text" id="nom"></input><br>
