--- a/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/uf2-pr2/exercici2.html
@@ -17,6 +17,8 @@
       <li><a href="exercici8.html">Exercici 8</a></li>
       <li><a href="exercici9.html">Exercici 9</a></li>
       <li><a href="exercici10.html">Exercici 10</a></li>
+      <li><a href="exercici11.html">Exercici 11</a></li>
+      <li><a href="exercici12.html">Exercici 12</a></li>
     </ul>
     <br>
     <hr>
@@ -55,7 +57,7 @@
   <script type="text/javascript">
   var ta = document.getElementById('calc');
   var taSplit
-  var result
+  var result = 0
   function printToTA(val) {
     if (val == "+") {
       result += ta.innerHTML;
