He avançat una mica la web del TR.

--- a/saia/index.html
+++ b/saia/index.html
@@ -27,16 +27,26 @@
         <img src="logos/aaaaaaTrueTrueSAIA.gif" alt="Logo SAIA S.A">
       </div>
     </div>
-    <div class="w3-container">
-      <div class="w3-content w3-display-container" style="width:100%">
-        <img src="imatges/ai1.jpg" alt="" class="mySlides" style="width:100%">
-        <img src="imatges/fugaku1.png" alt="" class="mySlides" style="width:100%">
-        <img src="imatges/mn1.jpg" alt="" class="mySlides" style="width:100%">
-        <img src="imatges/summit1.jpg" alt="" class="mySlides" style="width:100%">
-        <button class="w3-button w3-white w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="w3-button w3-white w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+    <div class="w3-card-4">
+      <div class="w3-container">
+        <img src="imatges/fugaku1.png" alt="Fugaku Supercomputer" style="width:50%">
+        <div class="w3-container w3-center">
+          <p>Fugaku Supercomputer</p>
+        </div>
       </div>
-      <p>TEXT</p>
+      <hr>
+      <table class="w3-striped w3-centered">
+        <tr>
+          <th>El 大き台</th>
+          <th>Per a entitats</th>
+          <th>Per a empreses</th>
+        </tr>
+        <tr>
+          <td><a href="hpc.html">El nostre superordinador</a></td>
+          <td><a href="queFem.html">Si vols consultar els nosters serveis per a empreses</a></td>
+          <td><a href="queFem.html">Si vols consultar els nostres serveis per a entitats</a></td>
+        </tr>
+      </table>
     </div>
   </div>
 </body>
