--- a/html/activitat4/index.html
+++ b/html/activitat4/index.html
@@ -12,12 +12,12 @@
   <table>
     <tr>
       <th>Producte</th>
-      <th><img class="in-table" src="images/i5126k.jpg" alt="Intel i5 12600k"></th>
-      <th><img class="in-table" src="images/ryzen5.jpg" alt="AMD Ryzen 5 5600X"></th>
-      <th><img class="in-table" src="images/rx6900xt.jpg" alt="AMD Radeon RX6900 XT"></th>
-      <th><img class="in-table" src="images/rtx3090.jpg" alt="NVIDIA RTX 3090"></th>
-      <th><img class="in-table" src="images/lpx16g.jpg" alt="Corsair Vengeance LPX 16GB"></th>
-      <th><img class="in-table" src="images/trizroyal..png" alt="G.Skill Trident Z Royal"></th>
+      <th><img class="in-table" src="images/i5126k.jpg" alt="Intel i5 12600k"><br/>Intel i5 12600K</th>
+      <th><img class="in-table" src="images/ryzen5.jpg" alt="AMD Ryzen 5 5600X"><br/>AMD Ryzen 5 5600X</th>
+      <th><img class="in-table" src="images/rx6900xt.jpg" alt="AMD Radeon RX6900 XT"><br/>AMD Radeon RX6900 XT</th>
+      <th><img class="in-table" src="images/rtx3090.jpg" alt="NVIDIA RTX 3090"><br/>NVIDIA RTX 3090</th>
+      <th><img class="in-table" src="images/lpx16g.jpg" alt="Corsair Vengeance LPX 16GB"><br/>Corsair Vengeance LPX 16GB</th>
+      <th><img class="in-table" src="images/trizroyal..png" alt="G.Skill Trident Z Royal">G.Skill Trident Z Royal</th>
     </tr>
     <tr>
       <th>Capacitat</th>
@@ -25,11 +25,11 @@
       <td>29.5MB Cache</td>
       <td>16GB GDDR6</td>
       <td>24G GDDR6X</td>
-      <td>8GB×2</td>
+      <td colspan="2">8GB Stick</td>
     </tr>
     <tr>
       <th>Colors</th>
-      <td>
+      <td rowspan="2">
         <ul>
           <li>Blau
             <div id="blafluix"></div>
@@ -39,54 +39,67 @@
           </li>
         </ul>
       </td>
-      <td>
+      <td rowspan="2">
         <ul>
           <li>Taronja
             <div id="amdtaronja"></div>
           </li>
           <li>Gris
-            <div id="amdgris"></div>
+            <div class="gris"></div>
           </li>
         </ul>
       </td>
-      <td>
+      <td rowspan="2">
         <ul>
-          <li></li>
-          <li></li>
+          <li>Gris
+            <div class="gris"></div>
+          </li>
+          <li>Negre
+            <div class="negre"></div>
+          </li>
         </ul>
       </td>
-      <td>
+      <td rowspan="2">
         <ul>
-          <li></li>
-          <li></li>
+          <li>Negre
+            <div class="negre"></div>
+          </li>
+          <li>Gris
+            <div class="gris"></div>
+          </li>
         </ul>
       </td>
-      <td>
+      <td rowspan="2">
         <ul>
-          <li></li>
-          <li></li>
+          <li>Negre
+            <div class="negre"></div>
+          </li>
         </ul>
       </td>
-      <td>
-
+      <td rowspan="2">
+        <ul>
+          <li>Daurat
+            <div id="gold"></div>
+          </li>
+        </ul>
       </td>
     </tr>
     <tr>
-      <th>Mides</th>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <th>Color 2</th>
+    </tr>
+    <tr>
+      <th>Sockets/Connectors</th>
+      <td>FCLGA1700</td>
+      <td>AM4</td>
+      <td colspan="2">PCIe 4 (16 canals)</td>
+      <td colspan="2">DDR4 288-pin</td>
     </tr>
     <tr>
       <th>Freqüència</th>
-      <td id="freq" colspan="2">4.2GHz</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="2">4.2GHz</td>
+      <td>2250MHz</td>
+      <td>1695MHz</td>
+      <td colspan="2">3200Mhz</td>
     </tr>
   </table>
 </body>
