Minor chages to Activity 4 It's just what the teacher wanted.

--- a/html/activitat4/index.html
+++ b/html/activitat4/index.html
@@ -9,6 +9,8 @@
   <title>Activitat 4</title>
 </head>
 <body>
+  <p class="right">Pau Figueras<br/>DAWBIO-1</p>
+  <h1>Activitat 4</h1>
   <table>
     <tr>
       <th>Producte</th>
@@ -32,10 +34,10 @@
       <td rowspan="2">
         <ul>
           <li>Blau
-            <div id="blafluix"></div>
+            <div id="intelblafluix"></div>
           </li>
           <li>Blau Fort
-            <div id="blaufort"></div>
+            <div id="intelblaufort"></div>
           </li>
         </ul>
       </td>
@@ -74,12 +76,14 @@
           <li>Negre
             <div class="negre"></div>
           </li>
+          <li>N/A</li>
         </ul>
       </td>
       <td rowspan="2">
         <ul>
           <li>Daurat
             <div id="gold"></div>
+            <li>N/A</li>
           </li>
         </ul>
       </td>
