Finished Activity 5 - HTML Tables

--- a/html/activitat5/index.html
+++ b/html/activitat5/index.html
@@ -8,6 +8,8 @@
   <title>Activitat 5</title>
 </head>
 <body>
+  <img class="fl" src="images/proven.png" alt="Logo IES Provençana" title="IES Provençana">
+  
   <p class="right">Pau Figueras</p>
   <p class="right">DAWBIO-1</p>
   <h1>Activitat 5</h1>
@@ -63,5 +65,12 @@
       <td></td>
     </tr>
   </table>
+  <br/>
+  <form action="">
+    <label for="mail">Escriu el teu correu:</label><br/>
+    <input id="mail" type="mail" placeholder="abcde@mail.cat" required>
+    <br/>
+    <button type="submit">Enviar</button>
+  </form>
 </body>
 </html>
