--- a/html/menu/index.html
+++ b/html/menu/index.html
@@ -10,12 +10,12 @@
 <body>
   <nav class="top">
     <ul>
-      <li><a href="../activitat1/index.html">Pràctica 1</a></li>
-      <li><a href="../activitat2/index.html">Pràctica 2</a></li>
-      <li><a href="../activitat3/index.html">Pràctica 3</a></li>
-      <li><a href="../activitat4/index.html">Pràctica 4</a></li>
-      <li><a href="../activitat5/index.html">Pràctica 5</a></li>
-      <li><a href="../activitat6/index.html">Pràctica 6</a></li>
+      <li><a href="activitat1/index.html">Pràctica 1</a></li>
+      <li><a href="activitat2/index.html">Pràctica 2</a></li>
+      <li><a href="activitat3/index.html">Pràctica 3</a></li>
+      <li><a href="activitat4/index.html">Pràctica 4</a></li>
+      <li><a href="activitat5/index.html">Pràctica 5</a></li>
+      <li><a href="activitat6/index.html">Pràctica 6</a></li>
     </ul>
   </nav>
   <p class="migi">Pau Figueras</p>
