Probably added something to this activity

--- a/html/activitat6/index.html
+++ b/html/activitat6/index.html
@@ -15,52 +15,56 @@
   <form action="accio.php" method="post" target="_self">
     <fieldset>
       <fieldset>
+        <div>
         <legend>Dades de l'alumne</legend>
-        <label for="nomalu">Nom*: </label>
-        <input id="nomalu" type="text" name="nomalu" required>
-        <br>
-        <label for="correu">Correu*: </label>
-        <input id="correu" type="mail" name="email" required>
-        <br>
-        <label for="nascut">Data de naixement: </label>
-        <input type="date" min="1970-01-01" max="2021-12-31" name="nascut" id="nascut">
-        <br>
-        <p>*Camps Obligatoris</p>
+          <label for="nomalu">Nom*: </label>
+          <input id="nomalu" type="text" name="nomalu" required>
+          <br>
+          <label for="correu">Correu*: </label>
+          <input id="correu" type="mail" name="email" required>
+          <br>
+          <label for="nascut">Data de naixement: </label>
+          <input type="date" min="1970-01-01" max="2021-12-31" name="nascut" id="nascut">
+          <br>
+          <p>*Camps Obligatoris</p>
+        </div>
       </fieldset>
       <fieldset>
-        <legend>Mòduls a cursar</legend>
-        <label for="m01">Mòdul 01&numsp;</label>
-        <input id="m01" type="checkbox" name="m01">
-        <br>
-        <label for="m02">Mòdul 02&numsp;</label>
-        <input id="m02" type="checkbox" name="m02">
-        <br>
-        <label for="m03">Mòdul 03&numsp;</label>
-        <input id="m03" type="checkbox" name="m03">
-        <br>
-        <label for="m04">Mòdul 04&numsp;</label>
-        <input id="m04" type="checkbox" name="m04">
-        <br>
-        <label for="m05">Mòdul 05&numsp;</label>
-        <input id="m05" type="checkbox" name="m05">
-        <br>
-        <label for="m06">Mòdul 06&numsp;</label>
-        <input id="m06" type="checkbox" name="m06">
-        <br>
-        <label for="m07">Mòdul 07&numsp;</label>
-        <input id="m07" type="checkbox" name="m07">
-        <br>
-        <label for="m08">Mòdul 08&numsp;</label>
-        <input id="m08" type="checkbox" name="m08">
-        <br>
-        <label for="m09">Mòdul 09&numsp;</label>
-        <input id="m09" type="checkbox" name="m09">
-        <br>
-        <label for="m010">Mòdul 010</label>
-        <input id="m010" type="checkbox" name="m010">
-        <br>
-        <label for="m011">Mòdul 011</label>
-        <input id="m011" type="checkbox" name="m011">
+        <div>
+          <legend>Mòduls a cursar</legend>
+          <label for="m01">Mòdul 01&numsp;</label>
+          <input id="m01" type="checkbox" name="m01">
+          <br>
+          <label for="m02">Mòdul 02&numsp;</label>
+          <input id="m02" type="checkbox" name="m02">
+          <br>
+          <label for="m03">Mòdul 03&numsp;</label>
+          <input id="m03" type="checkbox" name="m03">
+          <br>
+          <label for="m04">Mòdul 04&numsp;</label>
+          <input id="m04" type="checkbox" name="m04">
+          <br>
+          <label for="m05">Mòdul 05&numsp;</label>
+          <input id="m05" type="checkbox" name="m05">
+          <br>
+          <label for="m06">Mòdul 06&numsp;</label>
+          <input id="m06" type="checkbox" name="m06">
+          <br>
+          <label for="m07">Mòdul 07&numsp;</label>
+          <input id="m07" type="checkbox" name="m07">
+          <br>
+          <label for="m08">Mòdul 08&numsp;</label>
+          <input id="m08" type="checkbox" name="m08">
+          <br>
+          <label for="m09">Mòdul 09&numsp;</label>
+          <input id="m09" type="checkbox" name="m09">
+          <br>
+          <label for="m010">Mòdul 010</label>
+          <input id="m010" type="checkbox" name="m010">
+          <br>
+          <label for="m011">Mòdul 011</label>
+          <input id="m011" type="checkbox" name="m011">
+        </div>
       </fieldset>
       <fieldset>
         <legend>Cicle Formatiu</legend>
