Added entry fot Activitat 7, changed fonts

--- a/html/menu/index.html
+++ b/html/menu/index.html
@@ -16,6 +16,7 @@
       <li><a href="activitat4/index.html">Pràctica 4</a></li>
       <li><a href="activitat5/index.html">Pràctica 5</a></li>
       <li><a href="activitat6/index.html">Pràctica 6</a></li>
+      <li><a href="activitat7/index.html">Pràctica 7</a></li>
     </ul>
   </nav>
   <p class="migi">Pau Figueras</p>
