Updated Activitat 7 to meet requirements

--- a/html/menu/activitat7/index.html
+++ b/html/menu/activitat7/index.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-  <p class="right">Pau Figueras</p>
-  <p class="right">DAWBIO1</p>
-  <h1 class="center">Activitat 7</h1>
+  <header>
+    <p class="right">Pau Figueras</p>
+    <p class="right">DAWBIO1</p>
+    <h1 class="center">Activitat 7</h1>
+  <header>
   <section>
     <div class="container">
       <div class="fullwd">
@@ -59,5 +61,8 @@
       </table>
     </div>
   </section>
+  <footer>
+    <p class="center foot">"Proudly made with NeoVim. Tested mainly in Mozilla© Firefox"</p>
+  </footer>
 </body>
 </html>
