Removed some double quotes

--- a/html/menu/activitat7/index.html
+++ b/html/menu/activitat7/index.html
@@ -62,7 +62,7 @@
     </div>
   </section>
   <footer>
-    <p class="center foot">"Proudly made with NeoVim. Tested mainly in Mozilla© Firefox"</p>
+    <p class="center foot">Proudly made with NeoVim. Tested mainly in Mozilla© Firefox</p>
   </footer>
 </body>
 </html>
